--- a/index.html
+++ b/index.html
@@ -5,27 +5,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New-Year-New-Me</title>
+    <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- css link -->
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
+    <!-- header start -->
     <header>
         <div class="header">
             <div class="blank-div"></div>
             <div class="header-div">
                 <h1 class="header-title">All Thinks Are Possible If You believe</h1>
-                <p class="header-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="header-desc">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words<p>
                 <button class="btn-primary">Contact Us</button>
             </div>
         </div>
     </header>
-
+    <!-- header end -->
     <main>
-        <section id="blog-section">
-
+        <!-- blog-section start -->
+        <section class="blog-section">
+            <div class="blog-section-container">
+                 <div class="blog-img">
+                    <img src="./images/person.png" alt="">
+                </div>
+           
+                <div class="blog-section-desc">
+                    <h1 class="blog-title">My failures of previous year</h1>
+                    <p class="blog-desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <p><i class="fa-solid fa-check blog-icon"></i>Contrary to popular belief, is not simply.</p>
+                    <p><i class="fa-solid fa-check blog-icon"></i>Contrary to popular belief.</p>
+                    <p><i class="fa-solid fa-check blog-icon"></i>Contrary to popular , is not simply.</p>
+                    <p><i class="fa-solid fa-check blog-icon"></i>Contrary to popular belief, is not simply.</p>
+                    <p><i class="fa-solid fa-check blog-icon"></i>Contrary to popular simply.</p>
+                </div>
+            </div>
         </section>
+        <!-- blog-section end -->
+
+        <!-- plan section start -->
+        <section>
+            <div class="section-plan">
+                <h1 class="plan-title">My Plans</h1>
+                <div class="section-plan-container">
+                    <div class="plan-item">
+                        <img src="./images/icons/web.png" alt="">
+                        <h1>Web Development</h1>
+                        <p>I want to start</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="./images/icons/js.png" alt="">
+                        <h1>Javascript</h1>
+                        <p>I want to learn</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="./images/icons/smoke.png" alt="">
+                        <h1>Smoking Habit</h1>
+                        <p>I want to end</p>
+                    </div>
+                    <div class="plan-item">
+                        <img src="./images/icons/ecom.png" alt="">
+                        <h1>ecommerce</h1>
+                        <p>I want to develop</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- plan section end -->
+
+        <!-- linear gradiant -->
+        <div class="linear-container">
+            <div>
+                <h1>Awlays keep a positive mindset</h1>
+                <button class="btn-primary">Call Now</button>
+            </div>
+        </div>
     </main>
 
     <footer>
