--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- css link -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
     <!-- header start -->
