--- a/index.html
+++ b/index.html
@@ -123,6 +123,9 @@
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p><br>
                 <p>Email : info@gmail.com</p><br>
                 <p>Phone : 01500 00 00 00</p>
+                <img src="./images/icons/fb.png" alt="">
+                <img src="./images/icons/twitter.png" class="img1" alt="">
+                <img src="./images/icons/youtube.png" alt="">
             </div>
             <div class="footer-form">
                 <h1>Subscribe</h1>
